Make Stop Seeding button visible.
git-svn-id: https://svn.participatoryculture.org/svn/dtv/trunk@3975 bce20531-a64c-4166-8316-56baf4a01729

Original sha1: 9f94b8e8d670dbbc62194d4c44f127ba2476e543

--- a/tv/resources/css/download.css
+++ b/tv/resources/css/download.css
@@ -1,3 +1,3 @@
-.main-video-details-tasks-small.stop-upload {
+.round-button-left.stop-seeding {
     display: block;
 }
